update module to support configuration of also-notify

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -68,6 +68,9 @@ options {
 <% if !@allow_transfer.empty? -%>
     allow-transfer { <%= @allow_transfer.join("; ") %>; };
 <% end -%>
+<% if !@also_notify.empty? -%>
+    also-notify { <%= @also_notify.join("; ") %>; };
+<% end -%>
 <% if !@check_names.empty? -%>
 <% @check_names.each do |line| -%>
     check-names <%= line %>;
